Implemented Vue in email process

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21.1",
         "laravel-mix": "^6.0.25",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -18,6 +17,8 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "vue": "^2.6.14"
+        "axios": "^0.21.1",
+        "vue": "^2.6.14",
+        "vue-axios": "^3.2.4"
     }
 }
