--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
         "laravel-mix": "^6.0.25",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^2.0.2",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14"
     },
